--- a/css/style.css
+++ b/css/style.css
@@ -1,132 +1,156 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 li {
   list-style: none;
 }
+
 /* Estilo de header */
 .body {
-    background-color: white;
-    height: 100%;
+  background-color: white;
+  height: 100%;
 }
 
 .menu {
-    height: 110px;
-    width: 100%;
-    font-family: 'Poppins', sans-serif;
-    font-weight: normal;
-    font-size: 24px;
-    position: sticky;
-    top: 0;
-    background-color: white;
-  }
-  
-  .logoHeader {
-    padding: 20px;
-    position: fixed;
-    left: 160px;
-    top: 20px;
-  }
-  
-  .logoFashionify {
-    width: auto;
-    height: 36px;
-  }
-  
-  .menuItems {
-    position: fixed;
-    right: 141px;
-    top: 30px;
-    display: inline-block;
-  }
-  
-  a {
-    text-decoration: none;
-    color: black;
-  }
-  
-  .list {
-    display: inline-block;
-    padding: 15px;
-  }
-  
-  .list.item5 a {
-    color: white;
-    padding: 14px;
-    border-radius: 8px;
-    background-color: black;
-  }
+  height: 110px;
+  width: 100%;
+  font-family: 'Poppins', sans-serif;
+  font-weight: normal;
+  font-size: 24px;
+  position: sticky;
+  top: 0;
+  background-color: white;
+}
+
+.logoHeader {
+  padding: 20px;
+  position: fixed;
+  left: 160px;
+  top: 20px;
+}
+
+.logoFashionify {
+  width: auto;
+  height: 36px;
+}
+
+.menuItems {
+  position: fixed;
+  right: 141px;
+  top: 30px;
+  display: inline-block;
+}
+
+.menu li a:hover {
+  color: #FD8FFF;
+  transition: ease-in;
+  transition-duration: 250ms;
+}
+
+
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.list {
+  display: inline-block;
+  padding: 15px;
+}
+
+.list.item5 a {
+  color: white;
+  padding: 14px;
+  border-radius: 8px;
+  background-color: black;
+}
+
+.list.item5 a:hover {
+  color: black;
+  background-color: #FD8FFF;
+}
 
 
 
 /* Estilo de body */
 
 /* Estilo primera sección de la home */
-h1{
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 80px;
+h1 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
+  font-size: 80px;
 }
 
 h5 {
-    font-family: 'Poppins', sans-serif;
-    font-weight: normal;
-    font-size: 16px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: normal;
+  font-size: 16px;
 }
 
 .imagen-1 {
-    width: 593px;
-    height: auto;
+  width: 593px;
+  height: auto;
 }
 
 h3 {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 80px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
+  font-size: 80px;
 }
 
 .bajadaTarjetas {
-    font-family: 'Poppins', sans-serif;
-    font-weight: normal;
-    font-size: 16px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: normal;
+  font-size: 16px;
+  text-align: justify;
 }
 
 .imagen-2 {
-    width: 536px;
-    height: auto;
+  width: 536px;
+  height: auto;
 }
 
 h4 {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 500;
-    font-size: 40px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 40px;
 }
 
 .logosClientes {
-    width: auto;
-    height: 85px;
+  width: auto;
+  height: 85px;
 }
 
 h6 {
-    font-family: 'Poppins', sans-serif;
-    font-weight: normal;
-    font-size: 16px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: normal;
+  font-size: 16px;
 }
 
 footer {
-    background-color: black;
-    font-family: 'Poppins', sans-serif;
-    color: white;
+  background-color: black;
+  font-family: 'Poppins', sans-serif;
+  color: white;
 }
+
 .contactateButton {
-    font-family:  'Poppins', sans-serif;
-    font-weight: normal;
-    font-size: 24;
+  font-family: 'Poppins', sans-serif;
+  font-weight: normal;
+  font-size: 24;
 }
 
+.btn {
+  background-color: black;
+  border-color: black;
+}
 
+.btn button:hover {
+  background-color: #FD8FFF;
+}
 
-
-
+.d-flex {
+  background-color: black;
+}
